# macbook-setup

./: .gitignore  README.md  ansible.cfg  bootstrap.ps1  bootstrap.py  bootstrap.sh  main.yml  requirements.yml
roles/common/files/oh-my-posh/: theme.json
roles/common/tasks/: directories.yml  main.yml  shell.yml  shell_windows.yml  vscode.yml
roles/common/vars/: main.yml
roles/linux/tasks/: apt.yml  main.yml
roles/linux/vars/: main.yml
roles/macos/tasks/: install_homebrew_formula.yml  main.yml
roles/macos/vars/: main.yml
roles/windows/tasks/: main.yml
roles/windows/vars/: main.yml
v2/: README.md  bootstrap.ps1  bootstrap.sh  manifest.yaml  pyproject.toml
v2/app/: graph.py  logging.py  main.py  manifest.py  runner.py  util.py
v2/runners/: linux.sh  macos.sh  windows.ps1
v2/scripts/linux/: install-antigravity.sh  install-chrome-extensions.sh  install-chrome.sh  install-claude-code.sh  install-copilot-cli.sh  install-gemini-cli.sh  install-nerd-fonts.sh  install-oh-my-posh.sh  install-ollama.sh  install-zoom.sh
v2/scripts/linux/post/: docker-group.sh
v2/scripts/macos/: install-antigravity.sh  install-chrome-extensions.sh  install-claude-code.sh  install-copilot-cli.sh  install-fnm.sh  install-gemini-cli.sh  install-nerd-fonts.sh  install-oh-my-posh.sh  install-ollama.sh  install-uv.sh
v2/scripts/windows/: configure-fnm-profile.ps1  configure-terminal.ps1  install-antigravity.ps1  install-chrome-extensions.ps1  install-claude-code.ps1  install-copilot-cli.ps1  install-gemini-cli.ps1  install-nerd-fonts.ps1  install-uv.ps1
(+1 files in other folders)
